<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ContentView">&lt;Content&gt;</string>
    <string name="app_name">Android, Http Authentication</string>
<string name="Retrieve">Retrieve</string>
<string name="taskName">Task Name</string>
<string name="taskNameHint">Task Name</string>
<string name="listPrompt">Choose a list</string>
<string name="lists"></string>
<string name="duedate">Due Date</string>
<string-array name="list">
    <item>myList</item>
    <item>myList2</item>
</string-array>
</resources>
